##########################
# Setup.py Configuration #
##########################
[metadata]
name = neurommsig_knowledge
version = 0.0.1
description = Knowledge curated for NeuroMMSig during the AETIONOMY project
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/neurommsig/neurommsig-knowledge
download_url = https://github.com/neurommsig/neurommsig-knowledge/releases
project_urls =
    Bug Tracker = https://github.com/neurommsig/neurommsig-knowledge/issues
    Source Code = https://github.com/neurommsig/neurommsig-knowledge

# Author information
author = Daniel Domingo-Fernández
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Daniel Domingo-Fernández
maintainer_email = daniel.domingo.fernandez@scai.fraunhofer.de

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Biocuration
    Networks Biology

[options]
install_requires =
    bel_repository

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = neurommsig_knowledge

[options.entry_points]
console_scripts =
    neurommsig-knowledge = neurommsig_knowledge:main
